# serializer version: 1
# name: test_entities[binary_sensor][binary_sensor.air_conditioner_occupancy-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.air_conditioner_occupancy',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Occupancy',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.OCCUPANCY: 'occupancy'>,
    'original_icon': None,
    'original_name': 'Occupancy',
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AC000W000000001_human_det',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.air_conditioner_occupancy-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'occupancy',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner Occupancy',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.air_conditioner_occupancy',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.air_conditioner_problem-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.air_conditioner_problem',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Problem',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Problem',
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AC000W000000001_error_code',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.air_conditioner_problem-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'problem',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner Problem',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.air_conditioner_problem',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[button][button.air_conditioner_filter_sign_reset-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.air_conditioner_filter_sign_reset',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'filter_sign_reset',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'filter_sign_reset',
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AC000W000000001_filter_sign_reset',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button][button.air_conditioner_filter_sign_reset-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner filter_sign_reset',
    }),
    'context': <ANY>,
    'entity_id': 'button.air_conditioner_filter_sign_reset',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button][button.air_conditioner_re_read_all_properties-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'button.air_conditioner_re_read_all_properties',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Re-read all properties',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Re-read all properties',
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'refresh',
    'unique_id': 'AC000W000000001_refresh',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button][button.air_conditioner_re_read_all_properties-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner Re-read all properties',
    }),
    'context': <ANY>,
    'entity_id': 'button.air_conditioner_re_read_all_properties',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[climate][climate.air_conditioner-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'quiet',
        'low',
        'medium',
        'high',
        'auto',
      ]),
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 30.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 18.0,
      <ClimateEntityCapabilityAttribute.SWING_HORIZONTAL_MODES: 'swing_horizontal_modes'>: list([
        'on',
        'off',
        'position_1',
        'position_2',
        'position_3',
        'position_4',
        'position_5',
      ]),
      <ClimateEntityCapabilityAttribute.SWING_MODES: 'swing_modes'>: list([
        'on',
        'off',
        'position_1',
        'position_2',
        'position_3',
        'position_4',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.air_conditioner',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 937>,
    'translation_key': 'air_conditioner',
    'unique_id': 'AC000W000000001',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[climate][climate.air_conditioner-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 28.5,
      <ClimateEntityStateAttribute.FAN_MODE: 'fan_mode'>: 'auto',
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'quiet',
        'low',
        'medium',
        'high',
        'auto',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 30.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 18.0,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 937>,
      <ClimateEntityStateAttribute.SWING_HORIZONTAL_MODE: 'swing_horizontal_mode'>: 'position_5',
      <ClimateEntityCapabilityAttribute.SWING_HORIZONTAL_MODES: 'swing_horizontal_modes'>: list([
        'on',
        'off',
        'position_1',
        'position_2',
        'position_3',
        'position_4',
        'position_5',
      ]),
      <ClimateEntityStateAttribute.SWING_MODE: 'swing_mode'>: 'on',
      <ClimateEntityCapabilityAttribute.SWING_MODES: 'swing_modes'>: list([
        'on',
        'off',
        'position_1',
        'position_2',
        'position_3',
        'position_4',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 24.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.air_conditioner',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_error_code-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.air_conditioner_error_code',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Error code',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Error code',
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'error_code',
    'unique_id': 'AC000W000000001_error_code',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_error_code-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner Error code',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.air_conditioner_error_code',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_outdoor_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.air_conditioner_outdoor_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Outdoor temperature',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Outdoor temperature',
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'outdoor_temperature',
    'unique_id': 'AC000W000000001_outdoor_temperature',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_outdoor_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner Outdoor temperature',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.air_conditioner_outdoor_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '37.0',
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_raw_adjust_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.air_conditioner_raw_adjust_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'raw adjust_temperature',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'raw adjust_temperature',
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AC000W000000001_raw_adjust_temperature',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_raw_adjust_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner raw adjust_temperature',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.air_conditioner_raw_adjust_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '240',
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_raw_af_horizontal_direction-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.air_conditioner_raw_af_horizontal_direction',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'raw af_horizontal_direction',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'raw af_horizontal_direction',
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AC000W000000001_raw_af_horizontal_direction',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_raw_af_horizontal_direction-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner raw af_horizontal_direction',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.air_conditioner_raw_af_horizontal_direction',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '5',
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_raw_af_horizontal_num_dir-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.air_conditioner_raw_af_horizontal_num_dir',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'raw af_horizontal_num_dir',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'raw af_horizontal_num_dir',
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AC000W000000001_raw_af_horizontal_num_dir',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_raw_af_horizontal_num_dir-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner raw af_horizontal_num_dir',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.air_conditioner_raw_af_horizontal_num_dir',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '21',
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_raw_af_horizontal_swing-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.air_conditioner_raw_af_horizontal_swing',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'raw af_horizontal_swing',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'raw af_horizontal_swing',
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AC000W000000001_raw_af_horizontal_swing',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_raw_af_horizontal_swing-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner raw af_horizontal_swing',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.air_conditioner_raw_af_horizontal_swing',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_raw_af_vertical_direction-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.air_conditioner_raw_af_vertical_direction',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'raw af_vertical_direction',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'raw af_vertical_direction',
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AC000W000000001_raw_af_vertical_direction',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_raw_af_vertical_direction-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner raw af_vertical_direction',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.air_conditioner_raw_af_vertical_direction',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_raw_af_vertical_num_dir-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.air_conditioner_raw_af_vertical_num_dir',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'raw af_vertical_num_dir',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'raw af_vertical_num_dir',
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AC000W000000001_raw_af_vertical_num_dir',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_raw_af_vertical_num_dir-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner raw af_vertical_num_dir',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.air_conditioner_raw_af_vertical_num_dir',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '4',
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_raw_af_vertical_swing-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.air_conditioner_raw_af_vertical_swing',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'raw af_vertical_swing',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'raw af_vertical_swing',
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AC000W000000001_raw_af_vertical_swing',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_raw_af_vertical_swing-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner raw af_vertical_swing',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.air_conditioner_raw_af_vertical_swing',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_raw_device_capabilities-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.air_conditioner_raw_device_capabilities',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'raw device_capabilities',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'raw device_capabilities',
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AC000W000000001_raw_device_capabilities',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_raw_device_capabilities-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner raw device_capabilities',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.air_conditioner_raw_device_capabilities',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '229375',
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_raw_display_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.air_conditioner_raw_display_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'raw display_temperature',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'raw display_temperature',
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AC000W000000001_raw_display_temperature',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_raw_display_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner raw display_temperature',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.air_conditioner_raw_display_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '7850',
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_raw_economy_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.air_conditioner_raw_economy_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'raw economy_mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'raw economy_mode',
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AC000W000000001_raw_economy_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_raw_economy_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner raw economy_mode',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.air_conditioner_raw_economy_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_raw_error_code-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.air_conditioner_raw_error_code',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'raw error_code',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'raw error_code',
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AC000W000000001_raw_error_code',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_raw_error_code-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner raw error_code',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.air_conditioner_raw_error_code',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_raw_fan_speed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.air_conditioner_raw_fan_speed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'raw fan_speed',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'raw fan_speed',
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AC000W000000001_raw_fan_speed',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_raw_fan_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner raw fan_speed',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.air_conditioner_raw_fan_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '4',
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_raw_filter_sign_reset-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.air_conditioner_raw_filter_sign_reset',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'raw filter_sign_reset',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'raw filter_sign_reset',
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AC000W000000001_raw_filter_sign_reset',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_raw_filter_sign_reset-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner raw filter_sign_reset',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.air_conditioner_raw_filter_sign_reset',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_raw_human_det-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.air_conditioner_raw_human_det',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'raw human_det',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'raw human_det',
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AC000W000000001_raw_human_det',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_raw_human_det-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner raw human_det',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.air_conditioner_raw_human_det',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_raw_min_heat-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.air_conditioner_raw_min_heat',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'raw min_heat',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'raw min_heat',
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AC000W000000001_raw_min_heat',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_raw_min_heat-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner raw min_heat',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.air_conditioner_raw_min_heat',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_raw_operation_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.air_conditioner_raw_operation_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'raw operation_mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'raw operation_mode',
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AC000W000000001_raw_operation_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_raw_operation_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner raw operation_mode',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.air_conditioner_raw_operation_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '3',
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_raw_operation_source_id-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.air_conditioner_raw_operation_source_id',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'raw operation_source_id',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'raw operation_source_id',
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AC000W000000001_raw_operation_source_id',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_raw_operation_source_id-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner raw operation_source_id',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.air_conditioner_raw_operation_source_id',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2',
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_raw_outdoor_low_noise-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.air_conditioner_raw_outdoor_low_noise',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'raw outdoor_low_noise',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'raw outdoor_low_noise',
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AC000W000000001_raw_outdoor_low_noise',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_raw_outdoor_low_noise-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner raw outdoor_low_noise',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.air_conditioner_raw_outdoor_low_noise',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_raw_outdoor_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.air_conditioner_raw_outdoor_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'raw outdoor_temperature',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'raw outdoor_temperature',
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AC000W000000001_raw_outdoor_temperature',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_raw_outdoor_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner raw outdoor_temperature',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.air_conditioner_raw_outdoor_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '8700',
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_raw_powerful_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.air_conditioner_raw_powerful_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'raw powerful_mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'raw powerful_mode',
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AC000W000000001_raw_powerful_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.air_conditioner_raw_powerful_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner raw powerful_mode',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.air_conditioner_raw_powerful_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_entities[switch][switch.air_conditioner_economy-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.air_conditioner_economy',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Economy',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Economy',
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'economy',
    'unique_id': 'AC000W000000001_economy_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[switch][switch.air_conditioner_economy-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner Economy',
    }),
    'context': <ANY>,
    'entity_id': 'switch.air_conditioner_economy',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[switch][switch.air_conditioner_min_heat-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.air_conditioner_min_heat',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'min_heat',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'min_heat',
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AC000W000000001_min_heat',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[switch][switch.air_conditioner_min_heat-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner min_heat',
    }),
    'context': <ANY>,
    'entity_id': 'switch.air_conditioner_min_heat',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[switch][switch.air_conditioner_outdoor_unit_low_noise-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.air_conditioner_outdoor_unit_low_noise',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Outdoor unit low noise',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Outdoor unit low noise',
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'outdoor_low_noise',
    'unique_id': 'AC000W000000001_outdoor_low_noise',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[switch][switch.air_conditioner_outdoor_unit_low_noise-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner Outdoor unit low noise',
    }),
    'context': <ANY>,
    'entity_id': 'switch.air_conditioner_outdoor_unit_low_noise',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[switch][switch.air_conditioner_powerful-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.air_conditioner_powerful',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Powerful',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Powerful',
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'powerful',
    'unique_id': 'AC000W000000001_powerful_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[switch][switch.air_conditioner_powerful-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner Powerful',
    }),
    'context': <ANY>,
    'entity_id': 'switch.air_conditioner_powerful',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
